--- a/login.css
+++ b/login.css
@@ -1,28 +1,137 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mooli&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans", sans-serif; 
+  font-family: 'Montserrat', sans-serif;
+font-family: 'Mooli', sans-serif;
 }
 
 body{
-  background-color: rgb(94, 131, 131);
+  background-color: #fff0b3;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 20px 10px;
+  background-color: #553b1b;
+  z-index: 100;
+}
+
+.navbar .logo a {
+  font-size: 1.8rem;
+  text-decoration: none;
+  margin-right: 40px;
+  margin-left: 30px;
+  color: #f5f5f7;
+}
+
+#submenu{
+    margin: 10px;
+    list-style-type:none;
+    opacity: 0;
+    position: absolute;
+    top: 35px;
+    visibility: hidden;
+    z-index: 1;  
+    text-align: left;  
+}
+
+li:hover ul#submenu{
+    opacity: 1;
+    top: 80px;
+    visibility: visible;
+    background-color: #553b1b;
+    border-radius: 10px;
+}
+
+.navbar .links {
+  display: flex;
+  justify-content: flex-end;
+  margin-left:700px;
+  align-items: center;
+  list-style: none;
+  gap: 35px;
+}
+
+.navbar .links a {
+  font-weight: 500;
+  text-decoration: none;
+  color: #f5f5f7;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 10px 10px;
+  transition: 0.2s ease;
+}
+
+.drop{
+  margin:0px 15px;
+  text-align: left;
+}
+.navbar .links a:hover {
+  color: #f5f5f7;
+  /* background-color: gray; */
+  /* border-radius: 20px; */
+  /* height: 40px; */
+  transform: scale(1.1);  
+  border-bottom: 2px solid white;
+}
+
+.navbar .buttons a {
+  text-decoration: none;
+  color: #f5f5f7;
+  font-size: 1rem;
+  padding: 15px 0;
+  transition: 0.2s ease;
+}
+
+.navbar .buttons a:not(:last-child) {
+  margin-right: 30px;
+}
+
+.navbar .buttons .signin:hover {
+  text-decoration: underline;
+  font-size: 1.03rem;
+}
+
+.navbar .buttons .signup {
+  border: 1px solid #f5f5f7;
+  padding: 10px 20px;
+  border-radius: 0.375rem;
+  text-align: center;
+  transition: 0.2s ease;
+}
+
+.navbar .buttons .signup:hover {
+  background-color: #f5f5f7;
+  color: #1D1D1F;
+}
 .main {
   position: relative;
   display: flex;
   flex-direction: column;
-  background-color: #183D3D;
+  background-color: #553b1b;
   max-height: 450px;
   overflow: hidden;
   border-radius: 12px;
-  box-shadow: 7px 7px 10px 3px #2f6464;
-  width: 300px;
-  height: 100%;
-  margin: 150px 40%;
+  box-shadow: 2px 2px 60px 21px rgba(32,29,29,0.73);   
+   margin: 200px 40%;
+   z-index: -1;
+   /* margin-top: 400px; */
+  
 }
 
 .form {
@@ -31,6 +140,7 @@ body{
   gap: 14px;
   padding: 24px;
   text-align: center;
+  /* margin-left: 10px; */
 }
 
 #chk {
@@ -39,16 +149,22 @@ body{
 
 .login {
   position: relative;
-  width: 200px;
+  width: 300px;
   height: 900px;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
 .login label {
+  
   margin: 25% 0 5%;
+  margin-left: 28px;
+  
   
 }
 
 .login form button{
+  margin-left: 25px;
   border: 3px solid;
   border-color: white;
   border-radius: 10px;
@@ -73,24 +189,26 @@ label {
   border: none;
   outline: none;
   border-radius: 4px;
+  margin-left: 26px;
   
 }
 
 .register {
-  background: #eee;
+
+  background: #ffff;
   border-radius: 60% / 10%;
-  transform: translateY(15%);
+  transform: translateY(5%);
   transition: .8s ease-in-out;
-  
+
 }
 
 .register label {
-  color: #183D3D;
+  color: #553b1b;
   transform: scale(.6);
 }
 
 #chk:checked ~ .register {
-  transform: translateY(-54%);
+  transform: translateY(-59%);
 }
 
 #chk:checked ~ .register label {
@@ -107,7 +225,7 @@ label {
   height: 40px;
   margin: 12px auto 10%;
   color: #fff;
-  background: #183D3D;
+  background: #553b1b;
   font-size: 1rem;
   font-weight: bold;
   border: none;
@@ -117,5 +235,61 @@ label {
 }
 
 .form button:hover {
-  background-color: #183D3D;
+  background-color: #553b1b;
+}
+
+footer{
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: #553b1b;
+  height: auto;
+  width: 100vw;
+  font-family: "Open Sans";
+  padding-top: 40px;
+  color: #fff;
+}
+.footer-content{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
+.footer-content h3{
+margin-top: -10px;
+  font-size: 1.8rem;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 3rem;
+}
+.footer-content p{
+  max-width: 1000px;
+  margin: 10px auto;
+  line-height: 28px;
+  font-size: 14px;
+}
+.footer-bottom{
+  background: #000;
+  width: 100vw;
+  padding: 20px 0;
+  text-align: center;
+}
+.footer-bottom p{
+  font-size: 14px;
+  word-spacing: 2px;
+  text-transform: capitalize;
+}
+.footer-bottom span{
+  text-transform: uppercase;
+  opacity: .4;
+  font-weight: 200;
+}
+.logo {
+  display: flex;
+  height: 50px;
+  margin-left: 10px;
+  margin-right: -10px;
+  /* font-size: large; */
+  background-size: cover;
 }
